force-app/main/default/objects/Professional_Service_Estimate__c/Professional_Service_Estimate__c.object-meta.xml
<CustomObject>
    <customHelpPage>NCMT_ProfServ_HelpPage</customHelpPage>
    <description>Professional Service Estimates</description>
    <label>Professional Service Estimate</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Professional Service Estimates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>