force-app/main/default/objects/Professional_Service_Estimate__c/fields/AE75__c.field-meta.xml
<CustomField>
    <fullName>AE75__c</fullName>
    <defaultValue>0</defaultValue>
    <label>A/E SUM 75% Average</label>
    <precision>12</precision>
    <scale>9</scale>
    <type>Percent</type>
</CustomField>