force-app/main/default/objects/Professional_Service_Estimate__c/fields/AE90__c.field-meta.xml
<CustomField>
    <fullName>AE90__c</fullName>
    <defaultValue>0</defaultValue>
    <label>A/E SUM 90% Average</label>
    <precision>12</precision>
    <scale>9</scale>
    <type>Percent</type>
</CustomField>