force-app/main/default/objects/Professional_Service_Estimate__c/fields/AE_CMa_CMc_Cx_CECC__c.field-meta.xml
<CustomField>
    <fullName>AE_CMa_CMc_Cx_CECC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AE CMa CMc Cx CECC lookup</description>
    <label>AE CMa CMc Cx CECC</label>
    <referenceTo>AE_CMa_CMc_Cx__c</referenceTo>
    <relationshipLabel>CECC Lookup</relationshipLabel>
    <relationshipName>Professional_Service_Estimates</relationshipName>
    <type>Lookup</type>
</CustomField>