force-app/main/default/objects/Professional_Service_Estimate__c/fields/AE_CMa_CMc_Cx_ECC__c.field-meta.xml
<CustomField>
    <fullName>AE_CMa_CMc_Cx_ECC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AE CMa CMc Cx ECC lookup</description>
    <label>AE CMa CMc Cx ECC</label>
    <referenceTo>AE_CMa_CMc_Cx__c</referenceTo>
    <relationshipLabel>ECC Lookup</relationshipLabel>
    <relationshipName>Professional_Service_Estimates1</relationshipName>
    <type>Lookup</type>
</CustomField>