force-app/main/default/objects/Professional_Service_Estimate__c/fields/Anticipated_Date_of_Design_Award__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Date_of_Design_Award__c</fullName>
    <defaultValue>DATE(2017,10,1)</defaultValue>
    <description>Anticipated Date of Design Award</description>
    <label>Anticipated Date of Design Award</label>
    <type>Date</type>
</CustomField>