force-app/main/default/objects/Professional_Service_Estimate__c/fields/Anticipated_Start_Date_of_Construction__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Start_Date_of_Construction__c</fullName>
    <description>Anticipated Start Date of Construction</description>
    <label>Anticipated Start Date of Construction</label>
    <type>Date</type>
</CustomField>