force-app/main/default/objects/Professional_Service_Estimate__c/fields/Base_Date_of_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Base_Date_of_Estimate__c</fullName>
    <description>Base Date of Estimate</description>
    <label>Base Date of Estimate</label>
    <type>Date</type>
</CustomField>