force-app/main/default/objects/Professional_Service_Estimate__c/fields/Building_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Building_Parameter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Building Parameter lookup</description>
    <label>Building Parameter</label>
    <referenceTo>NCMT_Building_Parameter__c</referenceTo>
    <relationshipLabel>Building Parameter Lookup</relationshipLabel>
    <relationshipName>Professional_Service_Estimates</relationshipName>
    <type>Lookup</type>
</CustomField>