force-app/main/default/objects/Professional_Service_Estimate__c/fields/CECC__c.field-meta.xml
<CustomField>
    <fullName>CECC__c</fullName>
    <defaultValue>0</defaultValue>
    <description>CECC</description>
    <label>CECC</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>