force-app/main/default/objects/Professional_Service_Estimate__c/fields/CM90__c.field-meta.xml
<CustomField>
    <fullName>CM90__c</fullName>
    <defaultValue>0</defaultValue>
    <description>CM 90% Average</description>
    <label>CM 90% Average</label>
    <precision>12</precision>
    <scale>9</scale>
    <type>Percent</type>
</CustomField>