force-app/main/default/objects/Professional_Service_Estimate__c/fields/CM_Role__c.field-meta.xml
<CustomField>
    <fullName>CM_Role__c</fullName>
    <description>CM Role</description>
    <label>CM Role</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Delivery_Method__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>CM as Agent</fullName>
            </value>
            <value>
                <fullName>CM as Constructor</fullName>
            </value>
            <value>
                <fullName>CM as Agent and CM as Constructor</fullName>
            </value>
            <value>
                <fullName>Design-Build CM</fullName>
            </value>
            <value>
                <fullName>Developer CM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>