force-app/main/default/objects/Professional_Service_Estimate__c/fields/Construction__c.field-meta.xml
<CustomField>
    <fullName>Construction__c</fullName>
    <formula>if 
( text (CM_Role__c) =&apos;CM as Constructor&apos; ,  (Construction_CMc__c) , 
(
  (if (text (CM_Role__c) =&apos;CM as agent and CM as Constructor&apos;,  (Construction_CMa_and_CMc__c), 
   (Construction_Cma__c))) 
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CM Construction Phase Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>