force-app/main/default/objects/Professional_Service_Estimate__c/fields/Construction_AE_Percent__c.field-meta.xml
<CustomField>
    <fullName>Construction_AE_Percent__c</fullName>
    <formula>if (ECC__c &lt;&gt; 0, 
Construction_AE__c / ECC__c
,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Construction AE %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>