force-app/main/default/objects/Professional_Service_Estimate__c/fields/Construction_CM_as_Agent_CM_as_Const__c.field-meta.xml
<CustomField>
    <fullName>Construction_CM_as_Agent_CM_as_Const__c</fullName>
    <formula>if (ECC__c &lt;&gt; 0, 
if 
( text (CM_Role__c) =&apos;CM as Constructor&apos; , (Construction_CMc__c/ECC__c ) , 
( 
 (if (text (CM_Role__c) =&apos;CM as agent and CM as Constructor&apos;, (Construction_CMa_and_CMc__c/ECC__c ), 
 (Construction_Cma__c/ECC__c ))) 
) 
)
,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CM Construction %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>