force-app/main/default/objects/Professional_Service_Estimate__c/fields/Construction_Cma__c.field-meta.xml
<CustomField>
    <fullName>Construction_Cma__c</fullName>
    <description>Construction Cma</description>
    <label>Construction Cma</label>
    <summarizedField>Professional_Service_Estimate_List__c.Total__c</summarizedField>
    <summaryFilterItems>
        <field>Professional_Service_Estimate_List__c.EDRC_EMIC_Type__c</field>
        <operation>equals</operation>
        <value>EMIC Cma</value>
    </summaryFilterItems>
    <summaryForeignKey>Professional_Service_Estimate_List__c.PS__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>