force-app/main/default/objects/Professional_Service_Estimate__c/fields/Cost_Advantage__c.field-meta.xml
<CustomField>
    <fullName>Cost_Advantage__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Cost Advantage %</description>
    <label>Cost Advantage %</label>
    <precision>10</precision>
    <scale>7</scale>
    <type>Percent</type>
</CustomField>