force-app/main/default/objects/Professional_Service_Estimate__c/fields/Cost_Advantage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cost_Advantage_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Cost Advantage Amount</description>
    <label>Cost Advantage Amount</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>