force-app/main/default/objects/Professional_Service_Estimate__c/fields/Cost_Factor_based_on_ECC__c.field-meta.xml
<CustomField>
    <fullName>Cost_Factor_based_on_ECC__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Cost Factor based on ECC</description>
    <label>Cost Factor based on ECC</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>