force-app/main/default/objects/Professional_Service_Estimate__c/fields/Cx90__c.field-meta.xml
<CustomField>
    <fullName>Cx90__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Const. &amp; Bldg Inspectors(Cx) 90% Average</description>
    <label>Const. &amp; Bldg Inspectors(Cx) 90% Average</label>
    <precision>12</precision>
    <scale>9</scale>
    <type>Percent</type>
</CustomField>