force-app/main/default/objects/Professional_Service_Estimate__c/fields/Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Method__c</fullName>
    <description>Delivery Method</description>
    <label>Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Design-Bid-Build</fullName>
                <default>true</default>
                <label>Design-Bid-Build</label>
            </value>
            <value>
                <fullName>Design Build - Bridging</fullName>
            </value>
            <value>
                <fullName>Design Build - Leased</fullName>
            </value>
            <value>
                <fullName>Design Build - Owned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>