force-app/main/default/objects/Professional_Service_Estimate__c/fields/Design_Build_Leased_Delivery_Only__c.field-meta.xml
<CustomField>
    <fullName>Design_Build_Leased_Delivery_Only__c</fullName>
    <description>Design Build - Leased Delivery Only</description>
    <label>Design Build - Leased Delivery Only</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Delivery_Method__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Build to Suit</fullName>
            </value>
            <value>
                <fullName>Tenant Fit-out w/ Redesign</fullName>
            </value>
            <value>
                <fullName>Tenant Fit-out w/ no Redesign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>