force-app/main/default/objects/Professional_Service_Estimate__c/fields/Design_CM_as_Agent_and_CM_as_Const__c.field-meta.xml
<CustomField>
    <fullName>Design_CM_as_Agent_and_CM_as_Const__c</fullName>
    <formula>if (ECC__c &lt;&gt; 0, 
if 
( text (CM_Role__c) =&apos;CM as Constructor&apos; , (Design_CMc__c/ECC__c  ) , 
( 
 (if (text (CM_Role__c) =&apos;CM as agent and CM as Constructor&apos;, ( Design_CMa_and_CMc__c/ECC__c ), 
 (Design_Cma__c/ECC__c ))) 
) 
)
,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Design Phase CM %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>