force-app/main/default/objects/Professional_Service_Estimate__c/fields/Design_CM_as_Agent_and_CM_as_Constructor__c.field-meta.xml
<CustomField>
    <fullName>Design_CM_as_Agent_and_CM_as_Constructor__c</fullName>
    <formula>if 
( text (CM_Role__c) =&apos;CM as Constructor&apos; ,  (Design_CMc__c ) , 
(
  (if (text (CM_Role__c) =&apos;CM as agent and CM as Constructor&apos;,  (  Design_CMa_and_CMc__c), 
   (Design_Cma__c))) 
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Design CM Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>