force-app/main/default/objects/Professional_Service_Estimate__c/fields/Design_Cma__c.field-meta.xml
<CustomField>
    <fullName>Design_Cma__c</fullName>
    <description>Design Cma</description>
    <label>Design Cma</label>
    <summarizedField>Professional_Service_Estimate_List__c.Total__c</summarizedField>
    <summaryFilterItems>
        <field>Professional_Service_Estimate_List__c.EDRC_EMIC_Type__c</field>
        <operation>equals</operation>
        <value>EDRC Cma</value>
    </summaryFilterItems>
    <summaryForeignKey>Professional_Service_Estimate_List__c.PS__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>