force-app/main/default/objects/Professional_Service_Estimate__c/fields/Design_Cx_Percent__c.field-meta.xml
<CustomField>
    <fullName>Design_Cx_Percent__c</fullName>
    <formula>if (ECC__c &lt;&gt; 0, 
Design_CMx__c / ECC__c
,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Design Cx %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>