force-app/main/default/objects/Professional_Service_Estimate__c/fields/Design_Duration__c.field-meta.xml
<CustomField>
    <fullName>Design_Duration__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Design Duration in years</description>
    <label>Design Duration (years)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>