force-app/main/default/objects/Professional_Service_Estimate__c/fields/Detail_Complexity_Index__c.field-meta.xml
<CustomField>
    <fullName>Detail_Complexity_Index__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Detail Complexity Index</description>
    <label>Detail Complexity Index</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>