force-app/main/default/objects/Professional_Service_Estimate__c/fields/ECC__c.field-meta.xml
<CustomField>
    <fullName>ECC__c</fullName>
    <defaultValue>0</defaultValue>
    <description>ECC</description>
    <label>ECC</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>