force-app/main/default/objects/Professional_Service_Estimate__c/fields/Estimated_Number_of_Phases__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Number_of_Phases__c</fullName>
    <description>Estimated Number of Phases for R&amp;A</description>
    <label>Estimated Number of Phases</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>4+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>