force-app/main/default/objects/Professional_Service_Estimate__c/fields/Estimated_Total_GSF__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Total_GSF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Estimated Total GSF</description>
    <label>Estimated Total GSF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>