force-app/main/default/objects/Professional_Service_Estimate__c/fields/For_Design_Build_Owned_Stipend_Detail__c.field-meta.xml
<CustomField>
    <fullName>For_Design_Build_Owned_Stipend_Detail__c</fullName>
    <description>For Design Build - Owned Stipend - Detail</description>
    <label>Design Build - Owned Stipend Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Delivery_Method__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
                <default>true</default>
                <label>Medium</label>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>