force-app/main/default/objects/Professional_Service_Estimate__c/fields/GSA_CM_Construction__c.field-meta.xml
<CustomField>
    <fullName>GSA_CM_Construction__c</fullName>
    <formula>GSA_CM_Construction_Fee__c / ECC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GSA CM Construction %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>