force-app/main/default/objects/Professional_Service_Estimate__c/fields/GSA_CM_Design_Fee__c.field-meta.xml
<CustomField>
    <fullName>GSA_CM_Design_Fee__c</fullName>
    <formula>if ( text(Delivery_Method__c) == &apos;Design Build - Owned&apos;, 
( Design_CM_as_Agent_and_CM_as_Constructor__c +  Construction__c )*  GSA_CM_Design_Slope__c  +  GSA_CM_Design_Constant__c
,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GSA CM Design Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>