force-app/main/default/objects/Professional_Service_Estimate__c/fields/GSA_CM_Total_Fee__c.field-meta.xml
<CustomField>
    <fullName>GSA_CM_Total_Fee__c</fullName>
    <formula>GSA_CM_Design_Fee__c +  GSA_CM_Construction_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GSA CM Total Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>