force-app/main/default/objects/Professional_Service_Estimate__c/fields/Location_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Location_Parameter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Location Parameter</description>
    <label>Index Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>NCMT_Location_Parameters__c.State__c</field>
            <operation>equals</operation>
            <valueField>$Source.State__c</valueField>
        </filterItems>
        <filterItems>
            <field>NCMT_Location_Parameters__c.Fiscal_Year__c</field>
            <operation>equals</operation>
            <value>&apos;2017&apos;</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>NCMT_Location_Parameters__c</referenceTo>
    <relationshipLabel>Location Parameter</relationshipLabel>
    <relationshipName>Professional_Service_Estimates</relationshipName>
    <type>Lookup</type>
</CustomField>