force-app/main/default/objects/Professional_Service_Estimate__c/fields/Location_Parameter_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Parameter_Name__c</fullName>
    <formula>Location_Parameter__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Parameter Name</label>
    <type>Text</type>
</CustomField>