force-app/main/default/objects/Professional_Service_Estimate__c/fields/NCMT_Project__c.field-meta.xml
<CustomField>
    <fullName>NCMT_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NCMT_Project lookup</description>
    <label>NCMT Project</label>
    <referenceTo>NCMT_Project__c</referenceTo>
    <relationshipLabel>Professional Service Estimates</relationshipLabel>
    <relationshipName>Professional_Service_Estimates</relationshipName>
    <type>Lookup</type>
</CustomField>