force-app/main/default/objects/Professional_Service_Estimate__c/fields/New_Construction_Duration__c.field-meta.xml
<CustomField>
    <fullName>New_Construction_Duration__c</fullName>
    <defaultValue>0</defaultValue>
    <description>New Construction Duration in years</description>
    <label>New Construction Duration (years)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>