force-app/main/default/objects/Professional_Service_Estimate__c/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <description>Project Type</description>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Construction</fullName>
                <default>true</default>
                <label>New Construction</label>
            </value>
            <value>
                <fullName>Repair &amp; Alteration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>